--- a/config.yml
+++ b/config.yml
@@ -2,4 +2,4 @@ title: Philippe Louis Jr
 #logo: 
 description: Aspiring Data Scientist & Machine Learning Engineer | Educator | Passionate About Data-Driven Solutions | Data Science Master's Student @ Syracuse University School of Information Studies
 #show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
